force-app/main/default/objects/Fatura_Distribuidora__c/Fatura_Distribuidora__c.object-meta.xml
<CustomObject>
    <label>Fatura Distribuidora</label>
    <nameField>
        <label>Nome de Fatura Distribuidora</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fatura Distribuidoras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>