force-app/main/default/objects/Fatura_Distribuidora__c/fields/AccountValue__c.field-meta.xml
<CustomField>
    <fullName>AccountValue__c</fullName>
    <label>Valor Conta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>