force-app/main/default/objects/Fatura_Distribuidora__c/fields/Baixa_Renda__c.field-meta.xml
<CustomField>
    <fullName>Baixa_Renda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Baixa Renda</label>
    <type>Checkbox</type>
</CustomField>