force-app/main/default/objects/Fatura_Distribuidora__c/fields/Boptante__c.field-meta.xml
<CustomField>
    <fullName>Boptante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boptante</label>
    <type>Checkbox</type>
</CustomField>