force-app/main/default/objects/Fatura_Distribuidora__c/fields/Caracteristicas__c.field-meta.xml
<CustomField>
    <fullName>Caracteristicas__c</fullName>
    <label>Caracteristicas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa Renda</fullName>
            </value>
            <value>
                <fullName>Boptante</fullName>
            </value>
            <value>
                <fullName>Multa da Distribuidora</fullName>
            </value>
            <value>
                <fullName>Tarifa Branca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>