force-app/main/default/objects/Fatura_Distribuidora__c/fields/Classifica_o__c.field-meta.xml
<CustomField>
    <fullName>Classifica_o__c</fullName>
    <label>Classificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>