force-app/main/default/objects/Fatura_Distribuidora__c/fields/Consumo_Abaixo_do_Range__c.field-meta.xml
<CustomField>
    <fullName>Consumo_Abaixo_do_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumo Abaixo do Range</label>
    <type>Checkbox</type>
</CustomField>