force-app/main/default/objects/Fatura_Distribuidora__c/fields/Consumo_Historico__c.field-meta.xml
<CustomField>
    <fullName>Consumo_Historico__c</fullName>
    <label>Consumo Historico</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>