force-app/main/default/objects/Fatura_Distribuidora__c/fields/Consumo_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Consumo_Mensal__c</fullName>
    <label>Consumo Mensal</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>