force-app/main/default/objects/Fatura_Distribuidora__c/fields/Consumo_Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Consumo_Utilizado__c</fullName>
    <label>Consumo Utilizado</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>