force-app/main/default/objects/Fatura_Distribuidora__c/fields/Data_Altera_o_Instala_o__c.field-meta.xml
<CustomField>
    <fullName>Data_Altera_o_Instala_o__c</fullName>
    <label>Data Alteração Instalação</label>
    <type>DateTime</type>
</CustomField>