force-app/main/default/objects/Fatura_Distribuidora__c/fields/Data_Alteracao_CPFCNPJ__c.field-meta.xml
<CustomField>
    <fullName>Data_Alteracao_CPFCNPJ__c</fullName>
    <label>Data Alteração CPFCNPJ</label>
    <type>DateTime</type>
</CustomField>