force-app/main/default/objects/Fatura_Distribuidora__c/fields/Data_Prox_Atividade__c.field-meta.xml
<CustomField>
    <fullName>Data_Prox_Atividade__c</fullName>
    <label>Data Prox Atividade</label>
    <type>Date</type>
</CustomField>