force-app/main/default/objects/Fatura_Distribuidora__c/fields/Distribuidora__c.field-meta.xml
<CustomField>
    <fullName>Distribuidora__c</fullName>
    <label>Distribuidora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>