force-app/main/default/objects/Fatura_Distribuidora__c/fields/Distribuidora_n_o_Atendida__c.field-meta.xml
<CustomField>
    <fullName>Distribuidora_n_o_Atendida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribuidora não Atendida</label>
    <type>Checkbox</type>
</CustomField>