force-app/main/default/objects/Fatura_Distribuidora__c/fields/Edicao_CPFCNPJ__c.field-meta.xml
<CustomField>
    <fullName>Edicao_CPFCNPJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edição CPFCNPJ</label>
    <type>Checkbox</type>
</CustomField>