force-app/main/default/objects/Fatura_Distribuidora__c/fields/Erro_Gen_rico_de_Simula_o__c.field-meta.xml
<CustomField>
    <fullName>Erro_Gen_rico_de_Simula_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro Genérico de Simulação</label>
    <type>Checkbox</type>
</CustomField>