force-app/main/default/objects/Fatura_Distribuidora__c/fields/Erro_Leitura_Fatura__c.field-meta.xml
<CustomField>
    <fullName>Erro_Leitura_Fatura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro Leitura Fatura</label>
    <type>Checkbox</type>
</CustomField>