force-app/main/default/objects/Fatura_Distribuidora__c/fields/Erros__c.field-meta.xml
<CustomField>
    <fullName>Erros__c</fullName>
    <label>Erros</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multa da Distribuidora</fullName>
            </value>
            <value>
                <fullName>Consumo Abaixo do Range</fullName>
            </value>
            <value>
                <fullName>Distribuidora não Atendida</fullName>
            </value>
            <value>
                <fullName>Erro Genérico de Simulação</fullName>
            </value>
            <value>
                <fullName>Erro Leitura Fatura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>