force-app/main/default/objects/Fatura_Distribuidora__c/fields/Fatura_Anexada__c.field-meta.xml
<CustomField>
    <fullName>Fatura_Anexada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatura Anexada?</label>
    <type>Checkbox</type>
</CustomField>