force-app/main/default/objects/Fatura_Distribuidora__c/fields/Fatura_Processada__c.field-meta.xml
<CustomField>
    <fullName>Fatura_Processada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatura Processada?</label>
    <type>Checkbox</type>
</CustomField>