force-app/main/default/objects/Fatura_Distribuidora__c/fields/Guid_do_Arquivo_na_Digitaliza_o__c.field-meta.xml
<CustomField>
    <fullName>Guid_do_Arquivo_na_Digitaliza_o__c</fullName>
    <label>Guid do Arquivo na Digitalização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>