force-app/main/default/objects/Fatura_Distribuidora__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Fatura Distribuidoras</relationshipLabel>
    <relationshipName>Fatura_Distribuidoras</relationshipName>
    <type>Lookup</type>
</CustomField>