force-app/main/default/objects/Fatura_Distribuidora__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <label>Mensagem</label>
    <type>TextArea</type>
</CustomField>