force-app/main/default/objects/Fatura_Distribuidora__c/fields/Multa_da_Distribuidora__c.field-meta.xml
<CustomField>
    <fullName>Multa_da_Distribuidora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multa da Distribuidora</label>
    <type>Checkbox</type>
</CustomField>