force-app/main/default/objects/Fatura_Distribuidora__c/fields/Nome_do_Arquivo_anexo_com_extens_o__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Arquivo_anexo_com_extens_o__c</fullName>
    <label>Nome do Arquivo anexo com extensão</label>
    <length>200</length>
    <type>Text</type>
</CustomField>