force-app/main/default/objects/Fatura_Distribuidora__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fatura Distribuidoras</relationshipLabel>
    <relationshipName>Fatura_Distribuidoras</relationshipName>
    <type>Lookup</type>
</CustomField>