force-app/main/default/objects/Fatura_Distribuidora__c/fields/Pr_Lead__c.field-meta.xml
<CustomField>
    <fullName>Pr_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pré Lead</label>
    <referenceTo>PreLead__c</referenceTo>
    <relationshipLabel>Fatura Distribuidoras</relationshipLabel>
    <relationshipName>Fatura_Distribuidoras</relationshipName>
    <type>Lookup</type>
</CustomField>