force-app/main/default/objects/Fatura_Distribuidora__c/fields/Score_Serasa__c.field-meta.xml
<CustomField>
    <fullName>Score_Serasa__c</fullName>
    <label>Score Serasa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>