force-app/main/default/objects/Fatura_Distribuidora__c/fields/Tarifa_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Bancaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarifa Branca</label>
    <type>Checkbox</type>
</CustomField>