force-app/main/default/objects/Fatura_Distribuidora__c/fields/Unidades__c.field-meta.xml
<CustomField>
    <fullName>Unidades__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidades</label>
    <referenceTo>Units__c</referenceTo>
    <relationshipLabel>Fatura Distribuidoras</relationshipLabel>
    <relationshipName>Fatura_Distribuidoras</relationshipName>
    <type>Lookup</type>
</CustomField>