force-app/main/default/objects/Fatura_Distribuidora__c/fields/Valor_da_Fatura_R__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_Fatura_R__c</fullName>
    <label>Valor da Fatura (R$)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>