force-app/main/default/objects/Fatura_Distribuidora__c/fields/Volume_considerado_para_estudo_kWh__c.field-meta.xml
<CustomField>
    <fullName>Volume_considerado_para_estudo_kWh__c</fullName>
    <label>Volume considerado para estudo(kWh)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>